Add complete discussion code for module 05 lesson 09

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <body>
     <h1>Module 5 Lesson 9</h1>
     <h2>This Keyword</h2>
-    <script src="./script.js"></script>
+    <script src="./js/example-03.js"></script>
   </body>
 </html>
