--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <!-- <script src="./js/04-finally-method.js"></script> -->
     <!-- <script src="./js/05-promise-chaining.js"></script> -->
     <!-- <script src="./js/06-callback-chaining.js"></script> -->
-    <script src="./js/07-promise-conversion.js"></script>
+    <!-- <script src="./js/07-promise-conversion.js"></script> -->
+    <!-- <script src="./js/08-all-method.js"></script> -->
+    <script src="./js/09-race-method.js"></script>
+    <!-- <script src="./js/10-resolve-reject.js"></script> -->
   </body>
 </html>
